# pubmed-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy-container.sh  main.py  pyproject.toml  security-scan.sh
app/: config.py  models.py  pubmed_client.py  server.py  tools.py
security-scan-results/: security_checklist.md
